--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "atom-bluescreen",
   "main": "./lib/bluescreen",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Displays a 'blue screen of death' when a fatal error occurs.",
   "repository": "https://github.com/alexbuzzbee/atom-bluescreen",
   "license": "MIT",
   "engines": {
     "atom": ">1.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
