--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/alexbuzzbee/atom-bluescreen",
   "license": "MIT",
   "engines": {
-    "atom": ">1.0.0"
+    "atom": ">=0.174.0 <2.0.0"
   },
   "dependencies": {}
 }
